...
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(start = 20.dp, top = 10.dp, end = 20.dp, bottom = 18.dp)
                    .height(54.dp),
                shape = RoundedCornerShape(16.dp),
            ) {
                Text("Lanjutkan")
            }
        }
    }
}

@Composable
...
